<resources>
    <string name="app_name">SnapTrackApp</string>
    <string name="create_activity_name">Create Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_1">Today</string>
    <string name="nav_2">Activities</string>
    <string name="nav_3">Analytics</string>
    <string name="nav_4">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pair_an_nfc_name">Pair an NFC</string>
    <string name="name_of_activity">Name of Activity*</string>
    <string name="short_name">Short Name</string>
    <string name="labels">Labels for filtering (E.g Work,Life)</string>
    <string name="unique_colour">Unique Hex Colour (E.g #293E53)*</string>
    <string name="pair_an_nfc_screen_pop_up">Approach an NFC Tag \n Pair an NFC</string>
    <string name="erase_nfc_data_screen_pop_up">Approach an NFC Tag \n  \n Erase NFC Data</string>
    <string name="are_you_sure_you_want_to_delete"> \n Delete NFC Data?</string>
    <string name="erase_data_in_NFC">Erase NFC</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
