<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_1">

    <fragment
        android:id="@+id/navigation_1"
        android:name="com.example.snaptrackapp.ui.today.TodayFragment"
        android:label="@string/nav_1"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_2"
        android:name="com.example.snaptrackapp.ui.activities.ActivitiesFragment"
        android:label="@string/nav_2"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_3"
        android:name="com.example.snaptrackapp.ui.analytics.AnalyticsFragment"
        android:label="@string/nav_3"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/navigation_4"
        android:name="com.example.snaptrackapp.ui.me.MeFragment"
        android:label="@string/nav_4"
        tools:layout="@layout/fragment_me" />
</navigation>